# LatticeQL

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
_site/: index.html  llm.txt
_site/examples/: 010_count.lql  010_count.sql  020_filter_eq.lql  020_filter_eq.sql  030_filter_gin_flatten.lql  030_filter_gin_flatten.sql  040_group_count.lql  040_group_count.sql  050_aggregate_named.lql  050_aggregate_named.sql  060_having.lql  060_having.sql  070_bucket_month.lql  070_bucket_month.sql  080_sort_limit.lql  080_sort_limit.sql  090_match_with_column.lql  090_match_with_column.sql  100_sum_if.lql  100_sum_if.sql  110_sprint_health_completion.lql  110_sprint_health_completion.sql  _schema.json
src/lattice_ql/: __init__.py  __main__.py  ast.py  cli.py  codegen.py  error.py  lexer.py  parser.py  resolver.py  schema.py  sema.py
tests/: test_cli.py  test_codegen.py  test_golden.py  test_resolver.py  test_schema_loader.py  test_sema.py
