[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice-ql"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
lqlc = "lattice_ql.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_ql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
